--- a/HarryDuncan/week_01/homework/index.html
+++ b/HarryDuncan/week_01/homework/index.html
@@ -7,7 +7,7 @@
 	</head>
 	<body>
  		<h2>Open the fucking console to see the output,  DO IT NOW *Arny voice*</h2>
- 		<script src=".ex1.js"></script>
+ 		<script src="ex1.js"></script>
  	</body>
 </html>
 
